Upgraded to JDK 9